--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="ehliyet"
+        android:label="Ehliyet Sınavı 2025"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data
